--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>To do list</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Elena's To Do List</h1>
+  <div id=container>
+    <div class="list inner-container">
+      <ul>
+        <li><button class="delete">Delete</button> Wash dishes </li>
+        <li><button class="delete">Delete</button> Do laundry </li>
+      </ul>
+    </div>
+    <div class="input inner-container">
+      <form>
+        Add new item:<br>
+        <input id="list-item" type="text" name="list-item"><br>
+        <input id="add-button" type="button" value="Add item">
+      </form>
+    </div>
+  </div>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+ <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
